--- a/其他/师徒部落资料管理文档.md
+++ b/其他/师徒部落资料管理文档.md
@@ -5,5 +5,5 @@
 5. 运营平台.net：http://192.168.1.21/svn/stbl_web_admin/
 
 
-1. 师徒部落项目发布包：\web\web_wap\wx
-2. 运营平台前端发布包：\web\web_app_admin\adminweb
+1. 师徒部落项目发布包：`\web\web_wap\wx`
+2. 运营平台前端发布包：`\web\web_app_admin\adminweb`
